--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <!-- Bootstrap scripts -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <!-- Ajax -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 
@@ -59,11 +61,11 @@
       </div>
     </nav>
     <!-- Titulo-->
-    <div class="background_img">
-      <h1 class="h1_title">Emanuel Chagas</h1>
-      <h2 class="h2_title py-5">BARTENDER</h2>
+    <div  alt="Imagem de fundo" class="background_img">
+      <h1 tabindex="0" class="h1_title">Emanuel Chagas</h1>
+      <h2 tabindex="0" class="h2_title py-5">BARTENDER</h2>
       <div class="col text-center py-5">
-        <a href="#about" class="btn btn-lg btn-dark fw-bold border-white bg-black px-auto">Conhecer Mais</a>
+        <a tabindex="0" aria-label="Conhecer Mais" href="#about" class="btn btn-lg btn-dark fw-bold border-white bg-black px-auto">Conhecer Mais</a>
       </div>
       <h2 class="h2_subtitle"> Seus Drinks de Cara Nova
         </h1>
@@ -73,34 +75,34 @@
   <section id="about">
     <!-- about -->
     <div class=" col-lg-5 mx-auto">
-      <h2 class="h2_second_section">Sobre mim</h2>
-      <p class="p_second_section"> Um jovem que tem energia de sobra e disponibilidade em qualquer horário. Comecei trabalhando de freelancer para eventos de amigos e familiares dessa forma descobri minha paixão pela a coquetelaria. Trabalhei de freelancer mais algum tempo e inesperadamente veio a pandemia, após o fechamento dos bares e eventos me aperfeiçoei fazendo curso de coquetelaria e mixologia. Desde então, continuo a estudar e aprender mais sobre coquetelaria a cada dia. Enquanto espero ansioso para poder voltar a trabalhar novamente.   </p>
+      <h2 tabindex="0" class="h2_second_section">Sobre mim</h2>
+      <p tabindex="0" class="p_second_section"> Um jovem que tem energia de sobra e disponibilidade em qualquer horário. Comecei trabalhando de freelancer para eventos de amigos e familiares dessa forma descobri minha paixão pela a coquetelaria. Trabalhei de freelancer mais algum tempo e inesperadamente veio a pandemia, após o fechamento dos bares e eventos me aperfeiçoei fazendo curso de coquetelaria e mixologia. Desde então, continuo a estudar e aprender mais sobre coquetelaria a cada dia. Enquanto espero ansioso para poder voltar a trabalhar novamente.   </p>
     </div>
   </section>
   <section id="qualidade">
     <!--  Qualidades -->
     <div class="div_features container-fluid ">
-      <div class="row features_container">
-        <h2 class="h2_features px-5">Minhas Qualidades</h2>
+      <div class=" features_column row features_container">
+        <h2 tabindex="0" class="h2_features px-5">Minhas Qualidades</h2>
         <div class="feature-box col-lg-4">
-          <div class="img_hover">
+          <div tabindex="0" role="img" alt"Imagem de drink" class="img_feature_1">
           </div>
-          <h3 class="feature-title">Diversidade de Drinks</h3>
-          <p class="p_img">Drinks Clássicos, Autorais e Releituras.</p>
+          <h3 tabindex="0" class="feature-title">Diversidade de Drinks</h3>
+          <p tabindex="0" class="p_img">Drinks Clássicos, Autorais e Releituras.</p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <div class="img_hover_2">
+          <div tabindex="0" role="img" alt"Imagem de drink 2 " class="img_feature_2">
           </div>
-          <h3 class="feature-title">Perfeitos para qualquer momento</h3>
-          <p class="p_img">Para curtir aquele momento inesquecível com a família  ou com os amigos.</p>
+          <h3 tabindex="0" class="feature-title">Perfeitos para qualquer momento</h3>
+          <p tabindex="0" class="p_img">Para curtir aquele momento inesquecível com a família  ou com os amigos.</p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <div class="img_hover_3">
+          <div  tabindex="0" role="img" alt"Imagem de Bartender" class="img_feature_3">
           </div>
-          <h3 class="feature-title">Ótima organização de Bar </h3>
-          <p class="p_img">Utilização de um bom Mise Place.</p>
+          <h3 tabindex="0" class="feature-title">Ótima organização de Bar </h3>
+          <p tabindex="0" class="p_img">Utilização de um bom Mise Place.</p>
         </div>
       </div>
   </section>
@@ -110,12 +112,8 @@
     <div class=" py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">Álbum de Drinks</h1>
-          <p class="lead text-muted">Abaixo está uma amostra do meu álbum de drinks com os drinks feitos por mim.</p>
-          <p>
-            <!-- <a href="#" class="btn btn-primary my-2">Ver Todos</a>
-            <a href="#" class="btn btn-secondary my-2">Compartilhar</a> -->
-          </p>
+          <h1 tabindex="0" class="fw-light">Álbum de Drinks</h1>
+          <p tabindex="0" class="lead text-muted">Abaixo está uma amostra do meu álbum de drinks com os drinks feitos por mim.</p>
         </div>
       </div>
     </div>
@@ -126,14 +124,14 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <div class="album_img_1">
+              <div  tabindex="0" role="img" alt"imagem de drink Moscow Mule" class="album_img_1">
               </div>
               <div class="card-body">
-                <h4>Moscow Mule</h4>
-                <p class="card-text">Moscow Mule é um dos coquetéis mais famosos do mundo, o drink é feito com Vodka, Gengibre e Limão. Além de ser um clássico, o drink é muito apreciado e muito popular em diversas regiões do Brasil. </p>
+                <h4 tabindex="0" >Moscow Mule</h4>
+                <p tabindex="0" class="card-text">Moscow Mule é um dos coquetéis mais famosos do mundo, o drink é feito com Vodka, Gengibre e Limão. Além de ser um clássico, o drink é muito apreciado e muito popular em diversas regiões do Brasil. </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group ">
-                  <a href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
+                  <a aria-label=" Clique aqui para fazer Orçamento" href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
                   </div>
                 </div>
               </div>
@@ -141,14 +139,14 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <div class="album_img_2">
+              <div  tabindex="0" role="img" alt"imagem de drink Negroni" class="album_img_2">
               </div>
               <div class="card-body">
-                <h4>Negroni</h4>
-                <p class="card-text">O Negroni é um drinque italiano amargo, ótimo para ser servido como aperitivo. É feito de uma parte de gim, uma parte de vermute rosso, e uma parte de Campari, tem um gosto amargo, doce e cítrico. </p>
+                <h4 tabindex="0">Negroni</h4>
+                <p tabindex="0" class="card-text">O Negroni é um drinque italiano amargo, ótimo para ser servido como aperitivo. É feito de uma parte de gim, uma parte de vermute rosso, e uma parte de Campari, tem um gosto amargo, doce e cítrico. </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                  <a href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
+                  <a  aria-label=" Clique aqui para fazer Orçamento" href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
                     </div>
 
                 </div>
@@ -157,14 +155,14 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <div class="album_img_3">
+              <div tabindex="0" role="img" alt"imagem de drink Caipirinha de Morango" class="album_img_3">
               </div>
               <div class="card-body">
-                  <h4>Caipirinha de Morango</h4>
-                <p class="card-text"> A caipirinha de Morango além de ser uma variação da caipirinha, também é um ótimo drink. Com o gosto doce a caipirinha de morango é ótima como aperitivo e para qualquer ocasião.</p>
+                  <h4 tabindex="0" >Caipirinha de Morango</h4>
+                <p tabindex="0" class="card-text"> A caipirinha de Morango além de ser uma variação da caipirinha, também é um ótimo drink. Com o gosto doce a caipirinha de morango é ótima como aperitivo e para qualquer ocasião.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                      <a href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
+                      <a  aria-label=" Clique aqui para fazer Orçamento" href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
                   </div>
 
                 </div>
@@ -179,20 +177,19 @@
     <div class="container-fluid">
       <div class="row  align-items-center no-gutters">
         <div class=" col-lg-7">
-          <div class="rounded d-block img_div">
-            <p>a</p>
+          <div tabindex="0" role="img" alt"imagem de Pessoas se divertindo" class="rounded d-block img_div">
           </div>
         </div>
         <div class="col-lg-4">
           <div class="featured-text text-left text-lg-left text-white">
-            <h2 class="h2_contact">Entre em contato agora</h2>
-            <h2 class="h2_contact">e faça seu orçamento.</h2>
-            <h3>Telefone</h3>
-            <p>(47) 3319-2144</p>
-            <h3>Whatsapp</h3>
-            <p>(47) 9 9954-4746</p>
-            <h3>E-mail</h3>
-            <p>emanuel_bartender@gmail.com</p>
+            <h2 tabindex="0" class="h2_contact">Entre em contato agora</h2>
+            <h2 tabindex="0" class="h2_contact">e faça seu orçamento.</h2>
+            <h3 tabindex="0">Telefone</h3>
+            <p tabindex="0">(47) 3319-2144</p>
+            <h3 tabindex="0">Whatsapp</h3>
+            <p tabindex="0">(47) 9 9954-4746</p>
+            <h3 tabindex="0">E-mail</h3>
+            <p tabindex="0">emanuel_bartender@gmail.com</p>
           </div>
         </div>
       </div>
@@ -201,20 +198,23 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="d-flex justify-content-center ">
-      <a href="https://pt-br.facebook.com/" title="Facebook" class="link_footer mx-2">
+      <a  tabindex="0" aria-label=" Clique aqui para conhecer meu facebook"href="https://pt-br.facebook.com/" title="Facebook" class="link_footer mx-2">
         <i class="social-icon fab fa-facebook-f"></i> </a>
-      <a href="https://twitter.com/" title="Twitter" class="link_footer mx-2">
+      <a tabindex="0" aria-label=" Clique aqui para conhecer meu twitter"href="https://twitter.com/" title="Twitter" class="link_footer mx-2">
         <i class="social-icon fab fa-twitter"></i></a>
-      <a href="https://www.instagram.com/" title="Instagram" class="link_footer mx-2">
+      <a tabindex="0" aria-label=" Clique aqui para conhecer meu instagram" href="https://www.instagram.com/" title="Instagram" class="link_footer mx-2">
         <i class="social-icon fab fa-instagram"></i></a>
-      <a href="https://github.com/" title="Github" class="link_footer mx-2">
+      <a tabindex="0" aria-label=" Clique aqui para conhecer meu github" href="https://github.com/" title="Github" class="link_footer mx-2">
         <i class="social-icon fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/" title="Linkedin" class="link_footer mx-2">
+      <a tabindex="0" aria-label=" Clique aqui para conhecer meu linkedin"href="https://www.linkedin.com/" title="Linkedin" class="link_footer mx-2">
         <i class="social-icon fab fa-linkedin"></i></a>
     </div>
-    <p class="d-flex justify-content-center ">© Copyright 2021</p>
+    <p class="tabindex="0" d-flex justify-content-center ">© Copyright 2021</p>
     <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </footer>
+  <script  src="index.js" type="text/javascript">
+
+  </script>
 </body>
 
 </html>
