--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </nav>
     <!-- Titulo-->
-    <div  alt="Imagem de fundo" class="background_img">
+    <div alt="Imagem de fundo" class="background_img">
       <h1 tabindex="0" class="h1_title">Emanuel Chagas</h1>
       <h2 tabindex="0" class="h2_title py-5">BARTENDER</h2>
       <div class="col text-center py-5">
@@ -76,7 +76,9 @@
     <!-- about -->
     <div class=" col-lg-5 mx-auto">
       <h2 tabindex="0" class="h2_second_section">Sobre mim</h2>
-      <p tabindex="0" class="p_second_section"> Um jovem que tem energia de sobra e disponibilidade em qualquer horário. Comecei trabalhando de freelancer para eventos de amigos e familiares dessa forma descobri minha paixão pela a coquetelaria. Trabalhei de freelancer mais algum tempo e inesperadamente veio a pandemia, após o fechamento dos bares e eventos me aperfeiçoei fazendo curso de coquetelaria e mixologia. Desde então, continuo a estudar e aprender mais sobre coquetelaria a cada dia. Enquanto espero ansioso para poder voltar a trabalhar novamente.   </p>
+      <p tabindex="0" class="p_second_section"> Um jovem que tem energia de sobra e disponibilidade em qualquer horário. Comecei trabalhando de freelancer para eventos de amigos e familiares dessa forma descobri minha paixão pela a coquetelaria.
+        Trabalhei de freelancer mais algum tempo e inesperadamente veio a pandemia, após o fechamento dos bares e eventos me aperfeiçoei fazendo curso de coquetelaria e mixologia. Desde então, continuo a estudar e aprender mais sobre coquetelaria a
+        cada dia. Enquanto espero ansioso para poder voltar a trabalhar novamente. </p>
     </div>
   </section>
   <section id="qualidade">
@@ -92,14 +94,14 @@
         </div>
 
         <div class="feature-box col-lg-4">
-          <div tabindex="0" role="img" alt"Imagem de drink 2 " class="img_feature_2">
+          <div tabindex="0" role="img" alt"Imagem de drink 2 " class=" img_feature_2">
           </div>
           <h3 tabindex="0" class="feature-title">Perfeitos para qualquer momento</h3>
-          <p tabindex="0" class="p_img">Para curtir aquele momento inesquecível com a família  ou com os amigos.</p>
+          <p tabindex="0" class="p_img">Para curtir aquele momento inesquecível com a família ou com os amigos.</p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <div  tabindex="0" role="img" alt"Imagem de Bartender" class="img_feature_3">
+          <div tabindex="0" role="img" alt"Imagem de Bartender" class="img_feature_3">
           </div>
           <h3 tabindex="0" class="feature-title">Ótima organização de Bar </h3>
           <p tabindex="0" class="p_img">Utilização de um bom Mise Place.</p>
@@ -124,14 +126,15 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <div  tabindex="0" role="img" alt"imagem de drink Moscow Mule" class="album_img_1">
+              <div tabindex="0" role="img" alt"imagem de drink Moscow Mule" class="album_img_1">
               </div>
               <div class="card-body">
-                <h4 tabindex="0" >Moscow Mule</h4>
-                <p tabindex="0" class="card-text">Moscow Mule é um dos coquetéis mais famosos do mundo, o drink é feito com Vodka, Gengibre e Limão. Além de ser um clássico, o drink é muito apreciado e muito popular em diversas regiões do Brasil. </p>
+                <h4 tabindex="0">Moscow Mule</h4>
+                <p tabindex="0" class="card-text">Moscow Mule é um dos coquetéis mais famosos do mundo, o drink é feito com Vodka, Gengibre e Limão. Além de ser um clássico, o drink é muito apreciado e muito popular em diversas regiões do Brasil.
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group ">
-                  <a aria-label=" Clique aqui para fazer Orçamento" href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
+                    <a aria-label=" Clique aqui para fazer Orçamento" href="#contato" type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
                   </div>
                 </div>
               </div>
@@ -139,15 +142,16 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <div  tabindex="0" role="img" alt"imagem de drink Negroni" class="album_img_2">
+              <div tabindex="0" role="img" alt"imagem de drink Negroni" class="album_img_2">
               </div>
               <div class="card-body">
                 <h4 tabindex="0">Negroni</h4>
-                <p tabindex="0" class="card-text">O Negroni é um drinque italiano amargo, ótimo para ser servido como aperitivo. É feito de uma parte de gim, uma parte de vermute rosso, e uma parte de Campari, tem um gosto amargo, doce e cítrico. </p>
+                <p tabindex="0" class="card-text">O Negroni é um drinque italiano amargo, ótimo para ser servido como aperitivo. É feito de uma parte de gim, uma parte de vermute rosso, e uma parte de Campari, tem um gosto amargo, doce e cítrico.
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                  <a  aria-label=" Clique aqui para fazer Orçamento" href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
-                    </div>
+                    <a aria-label=" Clique aqui para fazer Orçamento" href="#contato" type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
+                  </div>
 
                 </div>
               </div>
@@ -158,11 +162,11 @@
               <div tabindex="0" role="img" alt"imagem de drink Caipirinha de Morango" class="album_img_3">
               </div>
               <div class="card-body">
-                  <h4 tabindex="0" >Caipirinha de Morango</h4>
+                <h4 tabindex="0">Caipirinha de Morango</h4>
                 <p tabindex="0" class="card-text"> A caipirinha de Morango além de ser uma variação da caipirinha, também é um ótimo drink. Com o gosto doce a caipirinha de morango é ótima como aperitivo e para qualquer ocasião.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                      <a  aria-label=" Clique aqui para fazer Orçamento" href="#contato"type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
+                    <a aria-label=" Clique aqui para fazer Orçamento" href="#contato" type="button" class="btn btn-sm btn-outline-secondary"> Fazer Orçamento</a>
                   </div>
 
                 </div>
@@ -198,21 +202,21 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="d-flex justify-content-center ">
-      <a  tabindex="0" aria-label=" Clique aqui para conhecer meu facebook"href="https://pt-br.facebook.com/" title="Facebook" class="link_footer mx-2">
+      <a tabindex="0" aria-label=" Clique aqui para conhecer meu facebook" href="https://pt-br.facebook.com/" title="Facebook" class="link_footer mx-2">
         <i class="social-icon fab fa-facebook-f"></i> </a>
-      <a tabindex="0" aria-label=" Clique aqui para conhecer meu twitter"href="https://twitter.com/" title="Twitter" class="link_footer mx-2">
+      <a tabindex="0" aria-label=" Clique aqui para conhecer meu twitter" href="https://twitter.com/" title="Twitter" class="link_footer mx-2">
         <i class="social-icon fab fa-twitter"></i></a>
       <a tabindex="0" aria-label=" Clique aqui para conhecer meu instagram" href="https://www.instagram.com/" title="Instagram" class="link_footer mx-2">
         <i class="social-icon fab fa-instagram"></i></a>
       <a tabindex="0" aria-label=" Clique aqui para conhecer meu github" href="https://github.com/" title="Github" class="link_footer mx-2">
         <i class="social-icon fab fa-github"></i></a>
-      <a tabindex="0" aria-label=" Clique aqui para conhecer meu linkedin"href="https://www.linkedin.com/" title="Linkedin" class="link_footer mx-2">
+      <a tabindex="0" aria-label=" Clique aqui para conhecer meu linkedin" href="https://www.linkedin.com/" title="Linkedin" class="link_footer mx-2">
         <i class="social-icon fab fa-linkedin"></i></a>
     </div>
-    <p class="tabindex="0" d-flex justify-content-center ">© Copyright 2021</p>
-    <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <p class="tabindex=" 0" d-flex justify-content-center ">© Copyright 2021</p>
+    <div>Icons made by <a href=" https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </footer>
-  <script  src="index.js" type="text/javascript">
+  <script src="index.js" type="text/javascript">
 
   </script>
 </body>
